--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
       hibernate:
         format_sql: true
     database: postgresql
-    database-platform: org.hibernate.dialect.PostgresSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
